# ECCO-obs-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml  pytest.ini  setup.py
.github/: RELEASE_PROCESS.md
.github/workflows/: changelog-check.yml  tests.yml
.streamlit/: config.toml
docs/adr/: 0001-transformation-parent-owns-solr-io.md
ecco_pipeline/: aggregation.py  baseclasses.py  dataset.py  field.py  run_pipeline.py
ecco_pipeline/aggregations/: README.md  aggjob.py  aggregate.py  aggregation.py  aggregation_factory.py
ecco_pipeline/conf/: README.md  global_settings.py  global_settings.py.example
ecco_pipeline/conf/ds_configs/: AMSR-2_OSI-408.yaml  AQUARIUS_L3_SSS_SMI_MONTHLY_V5.yaml  ATL20_V004.yaml  ATL20_V004_daily.yaml  ATL20_V004_monthly.yaml  ATL21_V003_daily.yaml  ATL21_V003_monthly.yaml  ATL21_V004_daily.yaml  ATL21_V004_monthly.yaml  AVHRR_OI-NCEI-L4-GLOB-v2.0.yaml  AVHRR_OI-NCEI-L4-GLOB-v2.1.yaml  G02202_V4.yaml  G02202_V5.yaml  G02202_V6.yaml  G10016_V2.yaml  G10016_V3.yaml  G10016_V4.yaml  GRC-GFO_GRIDDED_AOD1B_JPL_MASCON_RL06.yaml  L3_DEBIAS_LOCEAN_v10_q09.yaml  L3_DEBIAS_LOCEAN_v10_q18.yaml  L3_DEBIAS_LOCEAN_v5_q09.yaml  (+28 more)
ecco_pipeline/dashboard/: app.py  solr_client.py
ecco_pipeline/grid_transformation/: check_transformations.py  grid_transformation.py
ecco_pipeline/grids/: ECCO_llc270.nc  ECCO_llc90.nc  README.md  TPOSE.nc  polar_stereo_n_25km.nc
ecco_pipeline/harvesters/: README.md  aggregated_cmr_harvester.py  catds_harvester.py  cmems_harvester.py  cmr_harvester.py  granule.py  harvester.py  harvesterclasses.py  ifremer_ftp_harvester.py  nsidc_ftp_harvester.py  nsidc_harvester.py  osisaf_ftp_harvester.py  osisaf_harvester.py  podaac_harvester.py  rdeft4_harvester.py
ecco_pipeline/tests/: README.md  conftest.py  test.ipynb  test_cmr_harvester.py  test_cmr_query.py
ecco_pipeline/transformation/: README.md  Transformation.py  check_transformations.py  grid_transformation.py
ecco_pipeline/transformations/: README.md  check_transformations.py  grid_transformation.py  preload.py  transformation.py  transformation_factory.py
ecco_pipeline/utils/: config_validator.py  date_time.py  ecco_functions.py  file_utils.py  generalized_functions.py  grids_to_solr.py  harvesting_utils.py  init_pipeline.py  llc_array_conversion.py  log_config.py  make_pipeline_report.ipynb  mapping.py  prep-ecco-pipeline-staging.sh  records.py  solr_utils.py
notebooks/notebooks/: along_track_transformation.ipynb  pre-transformation-G02202_v5_2025-09-15.ipynb
notebooks/quicklook_notebooks/: AMSR-2_OSI-408.ipynb  AQUARIUS_L3_SSS_SMI_MONTHLY_V5.ipynb  ATL20_V004_daily.ipynb  ATL20_V004_monthly.ipynb  AVHRR_OI-NCEI-L4-GLOB-v2.0.ipynb  G02202_V5.ipynb  G10016_V3.ipynb  L3_DEBIAS_LOCEAN_v10_q09.ipynb  L3_DEBIAS_LOCEAN_v10_q18.ipynb  MODIS_AQUA_L3_SST_THERMAL_DAILY_9KM_DAYTIME_V2019.0.ipynb  OISSS_L4_multimission_monthly_v2.ipynb  RDEFT4.ipynb  README.md  SEA_SURFACE_HEIGHT_ALT_GRIDS_L4_2SATS_5DAY_6THDEG_V_JPL2205.ipynb  SMAP_RSS_L3_SSS_SMI_MONTHLY_V4.ipynb  SSMIS_OSI-430-a_daily.ipynb  SSMIS_OSI-430-a_monthly.ipynb  SSMIS_OSI-450-a_daily.ipynb  SSMIS_OSI-450-a_monthly.ipynb  TELLUS_GRAC-GRFO_MASCON_CRI_GRID_RL06.3_V4.ipynb  TELLUS_GRAC_L3_CSR_RL06_OCN_v04.ipynb  TELLUS_GRFO_L3_CSR_RL06.3_OCN_v04.ipynb  notebook_template.ipynb
(+134 files in other folders)
